--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/cc6f6e256a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,5 +38,6 @@
       dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet
       alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
     </p>
+    <i class="fab fa-instagram"></i>
   </body>
 </html>
