Changed font color

--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
     ></script>
   </head>
   <body>
-    <h2>👋 Hi I am</h2>
-    <h1>Gizem Eda Varol</h1>
-    <h3>🇹🇷 Front-end developer, based in Spain</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia,
-      dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet
-      alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-    </p>
-    <i class="fab fa-instagram"></i>
+    <div class="hero">
+      <h2>Hi I am</h2>
+      <h1 class="mb-2">Gizem Eda Varol</h1>
+      <h3>Front-end developer, based in Spain</h3>
+      <button>Contact me</button>
+    </div>
   </body>
 </html>
