--- a/index.html
+++ b/index.html
@@ -36,75 +36,83 @@
       <h3>Front-end developer, based in Spain</h3>
       <button>Contact me</button>
     </div>
+    <div class="container">
+      <div class="row mt-5 mb-5">
+        <div class="col-lg-6 image-column">
+          <img
+            src="/images/cappadocia.png"
+            alt="cappadocia balloon tour"
+            class="img-fluid rounded mb-5"
+          />
+        </div>
+
+        <div class="col-lg-6 bg-light rounded mb-2">
+          <div class="project-definition mt-5">
+            <h4 class="text-dark">Balloon Tour Project</h4>
+            <p class="mt-3 text-muted">
+              Since the late 300s BC the name Cappadocia came to be restricted
+              to the inland province (sometimes called Great Cappadocia), Upper
+              Cappadocia, which alone will be the focus of this article. Lower
+              Cappadocia is focused to elsewhere. According to Herodotus, in the
+              time of the Ionian Revolt (499 BC), the Cappadocians were reported
+              as occupying a region from Mount Taurus to the vicinity of the
+              Euxine (Black Sea).
+            </p>
+            <button>Learn more</button>
+          </div>
+        </div>
+      </div>
+      <hr class="section-line mb-5" />
+      <div class="row mt-5 mb-5">
+        <div class="col-lg-6 image-column">
+          <img
+            src="/images/weatherapp.png"
+            alt="cappadocia balloon tour"
+            class="img-fluid rounded mb-5"
+          />
+        </div>
+        <div class="col-lg-6 bg-light rounded mb-2">
+          <div class="project-definition mt-5">
+            <h4 class="text-dark">Weather App Project</h4>
+            <p class="mt-3 text-muted">
+              Since the late 300s BC the name Cappadocia came to be restricted
+              to the inland province (sometimes called Great Cappadocia), Upper
+              Cappadocia, which alone will be the focus of this article. Lower
+              Cappadocia is focused to elsewhere. According to Herodotus, in the
+              time of the Ionian Revolt (499 BC), the Cappadocians were reported
+              as occupying a region from Mount Taurus to the vicinity of the
+              Euxine (Black Sea).
+            </p>
+            <button>Learn more</button>
+          </div>
+        </div>
+      </div>
+      <hr class="section-line mb-5" />
+      <div class="row mt-5 mb-5">
+        <div class="col-lg-6 image-column">
+          <img
+            src="/images/cappadocia.png"
+            alt="cappadocia balloon tour"
+            class="img-fluid rounded mb-5"
+          />
+        </div>
+
+        <div class="col-lg-6 bg-light rounded mb-2">
+          <div class="project-definition mt-5">
+            <h4 class="text-dark">Dictionary App Project</h4>
+            <p class="mt-3 text-muted">
+              Since the late 300s BC the name Cappadocia came to be restricted
+              to the inland province (sometimes called Great Cappadocia), Upper
+              Cappadocia, which alone will be the focus of this article. Lower
+              Cappadocia is focused to elsewhere. According to Herodotus, in the
+              time of the Ionian Revolt (499 BC), the Cappadocians were reported
+              as occupying a region from Mount Taurus to the vicinity of the
+              Euxine (Black Sea).
+            </p>
+            <button>Learn more</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
-  <div class="container">
-    <div class="row mt-5 mb-5">
-    <div class="col-lg-6 image-column mb-5">
-      <img
-        src="/images/cappadocia.png"
-        alt="cappadocia balloon tour"
-        class="img-fluid rounded"
-      />
-    </div>
-    <div class="col-lg-6 bg-light rounded mb-5">
-      <div class="project-definition mt-5">
-        <h4 class="text-dark">Cappadocia Project</h4>
-        <p class="mt-3 text-muted">
-          Since the late 300s BC the name Cappadocia came to be restricted to
-          the inland province (sometimes called Great Cappadocia), Upper
-          Cappadocia, which alone will be the focus of this article. Lower
-          Cappadocia is focused to elsewhere. According to Herodotus, in the
-          time of the Ionian Revolt (499 BC), the Cappadocians were reported as
-          occupying a region from Mount Taurus to the vicinity of the Euxine
-          (Black Sea).
-        </p>
-        <button>Learn more</button>
-      </div>
-    </div>
-    <hr class="section-line mb-5">
-    <div class="row mb-5">
-    <div class="col-lg-6 image-column mb-5">
-      <img
-        src="images/weatherapp.png"
-        alt="cappadocia balloon tour"
-        class="img-fluid rounded width="700px"
-      />
-    </div>
-    <div class="col-lg-6 bg-light rounded mb-5">
-      <div class="project-definition mt-5">
-        <h4 class="text-dark">Weather App Project</h4>
-        <p class="mt-3 text-muted">
-          Far far away, behind the word mountains, far from the countries
-          Vokalia and Consonantia, there live the blind texts. Separated they
-          live in Bookmarksgrove right at the coast of the Semantics, a large
-          language ocean. A small river named Duden flows by
-        </p>
-        <button>Learn more</button>
-      </div>
-    </div>
-       <hr class="section-line mb-5">
-    <div class="row mb-5">
-    <div class="col-lg-6 image-column mb-5">
-      <img
-        src="/images/cappadocia.png"
-        alt="cappadocia balloon tour"
-        class="img-fluid rounded"
-      />
-    </div>
-    <div class="col-lg-6 bg-light rounded">
-      <div class="project-definition mt-5">
-        <h4 class="text-dark">Dictionary App Project</h4>
-        <p class="mt-3 text-muted">
-          Since the late 300s BC the name Cappadocia came to be restricted to
-          the inland province (sometimes called Great Cappadocia), Upper
-          Cappadocia, which alone will be the focus of this article. Lower
-          Cappadocia is focused to elsewhere. According to Herodotus, in the
-          time of the Ionian Revolt (499 BC), the Cappadocians were reported as
-          occupying a region from Mount Taurus to the vicinity of the Euxine
-          (Black Sea).
-        </p>
-        <button>Learn more</button>
-      </div>
-    </div>
-  </div>
 </html>
