--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Gizem Eda Varol</title>
+    <title>Homepage - Gizem Eda Varol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,11 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Fira+Sans&family=Righteous&family=Rubik&display=swap"
+      href="https://fonts.googleap.com/css2?family=Bree+Serif&family=Fira+Sans&family=Righteous&family=Rubik&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/styles/portfolio.css" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -40,14 +40,14 @@
       <div class="row mt-5 mb-5">
         <div class="col-lg-6 image-column">
           <img
-            src="/images/cappadocia.png"
+            src="images/cappadocia.png"
             alt="cappadocia balloon tour"
             class="img-fluid rounded mb-5"
           />
         </div>
 
         <div class="col-lg-6 bg-light rounded mb-2">
-          <div class="project-definition mt-5">
+          <div class="definition mt-5">
             <h4 class="text-dark">Balloon Tour Project</h4>
             <p class="mt-3 text-muted">
               Since the late 300s BC the name Cappadocia came to be restricted
@@ -66,13 +66,13 @@
       <div class="row mt-5 mb-5">
         <div class="col-lg-6 image-column">
           <img
-            src="/images/weatherapp.png"
+            src="images/weatherapp.png"
             alt="cappadocia balloon tour"
             class="img-fluid rounded mb-5"
           />
         </div>
         <div class="col-lg-6 bg-light rounded mb-2">
-          <div class="project-definition mt-5">
+          <div class="definition mt-5">
             <h4 class="text-dark">Weather App Project</h4>
             <p class="mt-3 text-muted">
               Since the late 300s BC the name Cappadocia came to be restricted
@@ -91,14 +91,14 @@
       <div class="row mt-5 mb-5">
         <div class="col-lg-6 image-column">
           <img
-            src="/images/cappadocia.png"
+            src="images/cappadocia.png"
             alt="cappadocia balloon tour"
             class="img-fluid rounded mb-5"
           />
         </div>
 
         <div class="col-lg-6 bg-light rounded mb-2">
-          <div class="project-definition mt-5">
+          <div class="definition mt-5">
             <h4 class="text-dark">Dictionary App Project</h4>
             <p class="mt-3 text-muted">
               Since the late 300s BC the name Cappadocia came to be restricted
