Updated text and definition paragraphs CSS

--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
     <h1 class="hero mb-5">About me</h1>
     <div class="container">
       <div class="row">
-        <div class="about-text col-lg-6 mt-3">
+        <div class="about-text col-lg-6">
           <h2 class="text-dark">Hi, I´m Gizem Eda Varol</h2>
-          <div class="definition bg-light">
+          <div class="definition bg-light mt-3">
             <h3 class="text-dark">Front-end developer, based in Spain</h3>
             <p class="text-muted">
               For anyone who wants to start learning code, this workshop is very
