Added my projects page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="hero mb-5">
       <h2>Hello I´m</h2>
       <h1 class="mb-5">Gizem Eda Varol</h1>
-      <h3>Front-end developer, based in Spain</h3>
+      <h3 class="text-opacity-light">Front-end developer, based in Spain</h3>
       <button>Contact me</button>
     </div>
     <div class="container">
