--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       href="https://fonts.googleap.com/css2?family=Bree+Serif&family=Fira+Sans&family=Righteous&family=Rubik&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="styles/portfolio.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -45,7 +44,6 @@
             class="img-fluid rounded mb-5"
           />
         </div>
-
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Balloon Tour Project</h4>
@@ -62,44 +60,18 @@
           </div>
         </div>
       </div>
-      <hr class="section-line mb-5" />
+      <hr />
       <div class="row mt-5 mb-5">
         <div class="col-lg-6 image-column">
           <img
             src="images/weatherapp.png"
             alt="cappadocia balloon tour"
-            class="img-fluid rounded mb-5"
+            class="img-fluid rounded mb-5 w-100"
           />
         </div>
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Weather App Project</h4>
-            <p class="mt-3 text-muted">
-              Since the late 300s BC the name Cappadocia came to be restricted
-              to the inland province (sometimes called Great Cappadocia), Upper
-              Cappadocia, which alone will be the focus of this article. Lower
-              Cappadocia is focused to elsewhere. According to Herodotus, in the
-              time of the Ionian Revolt (499 BC), the Cappadocians were reported
-              as occupying a region from Mount Taurus to the vicinity of the
-              Euxine (Black Sea).
-            </p>
-            <button>Learn more</button>
-          </div>
-        </div>
-      </div>
-      <hr class="section-line mb-5" />
-      <div class="row mt-5 mb-5">
-        <div class="col-lg-6 image-column">
-          <img
-            src="images/cappadocia.png"
-            alt="cappadocia balloon tour"
-            class="img-fluid rounded mb-5"
-          />
-        </div>
-
-        <div class="col-lg-6 bg-light rounded mb-2">
-          <div class="definition mt-3">
-            <h4 class="text-dark">Dictionary App Project</h4>
             <p class="mt-3 text-muted">
               Since the late 300s BC the name Cappadocia came to be restricted
               to the inland province (sometimes called Great Cappadocia), Upper
