--- a/projects.html
+++ b/projects.html
@@ -31,34 +31,41 @@
   </head>
   <body>
     <h1 class="hero mb-5">My projects <br />👩🏻‍💻</h1>
-
-    <h4 class="projects-main-heading text-center mb-5">
+    <h2 class="text-dark projects-main-heading text-center mb-5">
       Take a look at what I've been working on!
-    </h4>
+    </h2>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 image-column mb-5">
           <img
-            src="/images/cappadocia.png"
-            alt=""
-            class="img-fluid mb-3 w-100"
+            src="images/cappadocia.png"
+            alt="cappadocia balloon tour"
+            class="rounded img-fluid"
           />
-          <div class="project-headings mb-3">
-            <h5>Cappadocia Balloon Tour Project</h5>
-            <h6>Built with HTML and CSS</h6>
-            <p class="text-muted">You can see the open code link: #</p>
+        </div>
+        <div class="col-lg-6">
+          <div class="project-headings">
+            <h4>Cappadocia Balloon Tour Project</h4>
+            <h3 class="text-dark text-muted">
+              - Built with <strong>HTML</strong> and <strong>CSS</strong>
+            </h3>
+            <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
           </div>
         </div>
-        <div class="col-lg-6 mt-5">
-          <img
-            src="/images/weatherapp.png"
-            alt=""
-            class="img-fluid w-100 mt-5"
-          />
-          <div class="project-headings m-3">
-            <h5>Weather Application Project</h5>
-            <h6>Built with HTML, CSS and JavaScript</h6>
-            <p class="text-muted">You can see the open code link: #</p>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-lg-6 image-column mb-5 mt-5">
+          <img src="/images/weatherapp.png" alt="" class="img-fluid w-100" />
+        </div>
+        <div class="col-lg-6">
+          <div class="project-headings">
+            <h4>Weather Application Project</h4>
+            <h3 class="text-dark text-muted">
+              - Built with <strong>HTML</strong>,<strong>CSS</strong> and
+              <strong>JavaScript</strong>
+            </h3>
+            <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
           </div>
         </div>
       </div>
