Heading is added.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,30 @@
     <title>About page - Gizem Eda Varol</title>
   </head>
   <body>
-    <h1 class="hero mb-5">About me</h1>
+    <div class="first-section">
+      <nav>
+        <div class="container">
+          <ul>
+            <li class="heading-name">
+              <a href="/">Geda Varol</a>
+            </li>
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/about.html" class="active">About</a>
+            </li>
+            <li>
+              <a href="/projects.html"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="hero mb-5">About me</h1>
+    </div>
     <div class="container">
       <div class="row">
         <div class="about-text col-lg-6">
