--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,30 @@
     ></script>
   </head>
   <body>
-    <h1 class="hero mb-5">Contact me</h1>
+    <div class="first-section">
+      <nav>
+        <div class="container">
+          <ul>
+            <li class="heading-name">
+              <a href="/">Geda Varol</a>
+            </li>
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/about.html">About</a>
+            </li>
+            <li>
+              <a href="/projects.html"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html" class="active">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="hero mb-5">Contact me</h1>
+    </div>
     <div class="container">
       <div class="phone-number">
         <h4 class="text-muted">
