--- a/index.html
+++ b/index.html
@@ -29,11 +29,34 @@
     ></script>
   </head>
   <body>
-    <div class="hero mb-5">
-      <h2>Hello I´m</h2>
-      <h1 class="mb-5">Gizem Eda Varol</h1>
-      <h3 class="text-opacity-light">Front-end developer, based in Spain</h3>
-      <button>Contact me</button>
+    <div class="first-section">
+      <nav>
+        <div class="container">
+          <ul>
+            <li class="heading-name">
+              <a href="/">Geda Varol</a>
+            </li>
+            <li>
+              <a href="/" class="nav-headings active">Home</a>
+            </li>
+            <li>
+              <a href="/about.html" class="nav-headings">About</a>
+            </li>
+            <li>
+              <a href="/projects.html" class="nav-headings"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html" class="nav-headings">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="hero mb-5">
+        <h2>Hello I´m</h2>
+        <h1 class="mb-5">Gizem Eda Varol</h1>
+        <h3 class="text-opacity-light">Front-end developer, based in Spain</h3>
+        <button>Contact me</button>
+      </div>
     </div>
     <div class="container">
       <div class="row mt-5 mb-5">
