--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,31 @@
     <title>My projects - Gizem Eda Varol</title>
   </head>
   <body>
-    <h1 class="hero mb-5">My projects <br />👩🏻‍💻</h1>
+    <div class="first-section">
+      <nav>
+        <div class="container">
+          <ul>
+            <li class="heading-name">
+              <a href="/">Geda Varol</a>
+            </li>
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/about.html">About</a>
+            </li>
+            <li>
+              <a href="/projects.html" class="active">Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="hero mb-5">My projects <br />👩🏻‍💻</h1>
+    </div>
+
     <h2 class="text-dark projects-main-heading text-center mb-5">
       Take a look at what I've been working on!
     </h2>
