Contact page font size is done.

--- a/contact.html
+++ b/contact.html
@@ -54,38 +54,40 @@
       <h1 class="hero mb-5">Contact me</h1>
     </div>
     <div class="container">
-      <div class="phone-number">
-        <h4 class="text-muted">
-          ☎️ Phone number
-          <div><strong class="text-dark">+34 698518360</strong></div>
-        </h4>
-      </div>
-      <div class="email">
-        <h4 class="text-muted">
-          📧 E-mail
-          <div>
-            <strong
-              ><a href="mailto:gizemeda91@gmail.com" class="text-dark"
-                >gizemeda91@gmail.com</a
+      <div class="contact-info">
+        <div class="phone-number">
+          <div class="text-muted">
+            ☎️ Phone number
+            <div><strong class="text-dark">+34 698518360</strong></div>
+          </div>
+        </div>
+        <div class="email">
+          <div class="text-muted">
+            📧 E-mail
+            <div>
+              <strong
+                ><a href="mailto:gizemeda91@gmail.com" class="text-dark"
+                  >gizemeda91@gmail.com</a
+                >
+              </strong>
+            </div>
+          </div>
+        </div>
+        <div class="linkedin">
+          <div class="text-muted">
+            LinkedIn
+            <div>
+              <strong
+                ><a
+                  href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
+                  target="_blank"
+                  class="linkedin-link text-dark"
+                  >https://www.linkedin.com/in/gizem-eda-varol-77011753/</a
+                ></strong
               >
-            </strong>
+            </div>
           </div>
-        </h4>
-      </div>
-      <div class="linkedin">
-        <h4 class="text-muted">
-          LinkedIn
-          <div>
-            <strong
-              ><a
-                href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
-                target="_blank"
-                class="text-dark"
-                >https://www.linkedin.com/in/gizem-eda-varol-77011753/</a
-              ></strong
-            >
-          </div>
-        </h4>
+        </div>
       </div>
     </div>
   </body>
