Added footer part

--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,8 @@
                   href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
                   target="_blank"
                   class="linkedin-link text-dark"
-                  >https://www.linkedin.com/in/gizem-eda-varol-77011753/</a
-                ></strong
-              >
+                  ><i class="fab fa-linkedin"></i></i></a
+              ></strong>
             </div>
           </div>
         </div>
