--- a/projects.html
+++ b/projects.html
@@ -96,5 +96,20 @@
         </div>
       </div>
     </div>
+    <footer>
+      <hr />
+      <h4 class="text-muted">Contact me</h4>
+      <div class="social-links">
+        <a href="mailto:gizemeda91@gmail.com" class="footer-email bg-light"
+          >📧</a
+        >
+        <a
+          href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
+          target="_blank"
+          class="footer-linkedin bg-light"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
