Footer heading is centered

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </div>
     <footer>
       <hr />
-      <h4 class="text-muted">Contact me</h4>
+      <h4 class="text-muted text-center">Contact me</h4>
       <div class="social-links">
         <a href="mailto:gizemeda91@gmail.com" class="footer-email bg-light"
           >📧</a
