Made the website SEO friendly and fixed the links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage - Gizem Eda Varol</title>
+    <meta
+      name="description"
+      content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities."
+    />
+    <title>Front-end Developer - Gizem Eda Varol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,19 +39,35 @@
         <div class="container">
           <ul>
             <li class="heading-name">
-              <a href="/">Geda Varol</a>
+              <a href="/" title="Homepage">Geda Varol</a>
             </li>
             <li>
-              <a href="/" class="nav-headings active">Home</a>
+              <a href="/" title="Homepage" class="nav-headings active">Home</a>
             </li>
             <li>
-              <a href="/about.html" class="nav-headings">About</a>
+              <a
+                href="/about.html"
+                title="About Gizem Eda Varol"
+                class="nav-headings"
+                >About</a
+              >
             </li>
             <li>
-              <a href="/projects.html" class="nav-headings"> Projects</a>
+              <a
+                href="/projects.html"
+                title="The projects of Gizem Eda Varol"
+                class="nav-headings"
+              >
+                Projects</a
+              >
             </li>
             <li>
-              <a href="/contact.html" class="nav-headings">Contact</a>
+              <a
+                href="/contact.html"
+                title="Contact Gizem Eda Varol"
+                class="nav-headings"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -55,9 +75,13 @@
       </nav>
       <div class="hero mb-5">
         <h2>Hello I´m</h2>
-        <h1 class="mb-5">Gizem Eda Varol</h1>
-        <h3 class="text-opacity-light">Front-end developer, based in Spain</h3>
-        <button>Contact me</button>
+        <h1 class="mb-3">Gizem Eda Varol</h1>
+        <h3 class="text-opacity-light mb-5">
+          Front-end developer, based in Spain
+        </h3>
+        <div class="button">
+          <a href="/contact.html" title="contact button">Contact me</a>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -115,13 +139,17 @@
       <hr />
       <h4 class="text-muted text-center">Contact me</h4>
       <div class="social-links">
-        <a href="mailto:gizemeda91@gmail.com" class="footer-email bg-light"
+        <a
+          href="mailto:gizemeda91@gmail.com"
+          class="footer-email bg-light"
+          title="email address"
           >📧</a
         >
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
           class="footer-linkedin bg-light"
+          title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
         ></a>
       </div>
