--- a/about.html
+++ b/about.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities. You can see more info about Gizem Eda Varol."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,10 +30,7 @@
       src="https://kit.fontawesome.com/cc6f6e256a.js"
       crossorigin="anonymous"
     ></script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About page - Gizem Eda Varol</title>
+    <title>About Gizem Eda Varol</title>
   </head>
   <body>
     <div class="first-section">
@@ -35,45 +39,55 @@
         <div class="container">
           <ul>
             <li class="heading-name">
-              <a href="/">Geda Varol</a>
+              <a href="/" title="Homepage">Geda Varol</a>
             </li>
             <li>
-              <a href="/">Home</a>
+              <a href="/" title="Homepage">Home</a>
             </li>
             <li>
-              <a href="/about.html" class="active">About</a>
+              <a href="/about.html" title="About Gizem Eda Varol" class="active"
+                >About</a
+              >
             </li>
             <li>
-              <a href="/projects.html"> Projects</a>
+              <a href="/projects.html" title="The projects of Gizem Eda Varol">
+                Projects</a
+              >
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="/contact.html" title="Contact Gizem Eda Varol"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
         <hr />
       </nav>
-      <h1 class="hero mb-5">About me</h1>
+      <h1 class="hero">About me</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="about-text col-lg-6">
-          <h2 class="text-dark">Hi, I´m Gizem Eda Varol</h2>
+          <h2 class="text-dark mt-5">Hi, I´m Gizem Eda Varol</h2>
           <div class="definition bg-light mt-3">
             <h3 class="text-dark">Front-end developer, based in Spain</h3>
-            <p class="text-muted">
+            <p class="text-muted mb-1">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <button>See my projects</button>
+            <div class="button p-4 ps-0">
+              <a href="/projects.html" title="Projects button"
+                >See my projects</a
+              >
+            </div>
           </div>
         </div>
         <div class="col-lg-6 text-center">
           <img
             src="images/giz.jpg"
-            alt="cappadocia balloon tour"
+            alt="image of Gizem Eda Varol"
             class="img-fluid rounded mb-5"
           />
         </div>
@@ -83,13 +97,17 @@
       <hr />
       <h4 class="text-muted text-center">Contact me</h4>
       <div class="social-links">
-        <a href="mailto:gizemeda91@gmail.com" class="footer-email bg-light"
+        <a
+          href="mailto:gizemeda91@gmail.com"
+          class="footer-email bg-light"
+          title="email address of Gizem Eda Varol"
           >📧</a
         >
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
           class="footer-linkedin bg-light"
+          title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
         ></a>
       </div>
