--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities. You can contact Gizem Eda Varol.">
+    <title>Contact Gizem Eda Varol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,24 +31,32 @@
   </head>
   <body>
     <div class="first-section">
-      <nav>
+     <nav>
         <hr />
         <div class="container">
           <ul>
             <li class="heading-name">
-              <a href="/">Geda Varol</a>
+              <a href="/" title="Homepage">Geda Varol</a>
             </li>
             <li>
-              <a href="/">Home</a>
+              <a href="/" title="Homepage">Home</a>
             </li>
             <li>
-              <a href="/about.html">About</a>
+              <a href="/about.html" title="About Gizem Eda Varol">About</a>
             </li>
             <li>
-              <a href="/projects.html"> Projects</a>
+              <a
+                href="/projects.html"
+                title="The projects of Gizem Eda Varol"
+               
+              >
+                Projects</a
+              >
             </li>
             <li>
-              <a href="/contact.html" class="active">Contact</a>
+              <a href="/contact.html" title="Contact Gizem Eda Varol"
+                 class="active">Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -68,7 +77,7 @@
             📧 E-mail
             <div>
               <strong
-                ><a href="mailto:gizemeda91@gmail.com" class="text-dark"
+                ><a href="mailto:gizemeda91@gmail.com" title="email address" class="text-dark"
                   >gizemeda91@gmail.com</a
                 >
               </strong>
@@ -83,6 +92,7 @@
                 ><a
                   href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
                   target="_blank"
+                  title="linkedin profile of Gizem Eda Varol"
                   class="linkedin-link text-dark"
                   ><i class="fab fa-linkedin"></i></i></a
               ></strong>
