--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities. You can see the projects of Gizem Eda Varol."
+    />
+    <title>Projects of Gizem Eda Varol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +21,6 @@
       href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Fira+Sans&family=Righteous&family=Rubik&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="styles/portfolio.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -24,10 +31,6 @@
       src="https://kit.fontawesome.com/cc6f6e256a.js"
       crossorigin="anonymous"
     ></script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My projects - Gizem Eda Varol</title>
   </head>
   <body>
     <div class="first-section">
@@ -36,19 +39,27 @@
         <div class="container">
           <ul>
             <li class="heading-name">
-              <a href="/">Geda Varol</a>
+              <a href="/" title="Homepage">Geda Varol</a>
             </li>
             <li>
-              <a href="/">Home</a>
+              <a href="/" title="Homepage">Home</a>
             </li>
             <li>
-              <a href="/about.html">About</a>
+              <a href="/about.html" title="About Gizem Eda Varol">About</a>
             </li>
             <li>
-              <a href="/projects.html" class="active">Projects</a>
+              <a
+                href="/projects.html"
+                title="The projects of Gizem Eda Varol"
+                class="active"
+              >
+                Projects</a
+              >
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="/contact.html" title="Contact Gizem Eda Varol"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -56,7 +67,6 @@
       </nav>
       <h1 class="hero mb-5">My projects <br />👩🏻‍💻</h1>
     </div>
-
     <h2 class="text-dark projects-main-heading text-center mb-5">
       Take a look at what I've been working on!
     </h2>
@@ -65,7 +75,7 @@
         <div class="col-lg-6 image-column mb-5">
           <img
             src="images/cappadocia.png"
-            alt="cappadocia balloon tour"
+            alt="Cappadocia balloon tour project preview"
             class="rounded img-fluid"
           />
         </div>
@@ -82,7 +92,11 @@
       <hr />
       <div class="row">
         <div class="col-lg-6 image-column mb-5 mt-5">
-          <img src="/images/weatherapp.png" alt="" class="img-fluid w-100" />
+          <img
+            src="/images/weatherapp.png"
+            alt="Weather app project preview"
+            class="img-fluid w-100"
+          />
         </div>
         <div class="col-lg-6">
           <div class="project-headings">
@@ -100,12 +114,16 @@
       <hr />
       <h4 class="text-muted text-center">Contact me</h4>
       <div class="social-links">
-        <a href="mailto:gizemeda91@gmail.com" class="footer-email bg-light"
+        <a
+          href="mailto:gizemeda91@gmail.com"
+          class="footer-email bg-light"
+          title="email address"
           >📧</a
         >
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
+          title="linkedin profile of Gizem Eda Varol"
           class="footer-linkedin bg-light"
           ><i class="fab fa-linkedin-in"></i
         ></a>
