Updated homepage content and CSS

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
     </div>
     <footer>
       <hr />
-      <h4 class="text-muted text-center">Contact me</h4>
+      <h4 class="text-center">Contact me</h4>
       <div class="social-links">
         <a
           href="mailto:gizemeda91@gmail.com"
@@ -106,7 +106,7 @@
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
-          class="footer-linkedin bg-light"
+          class="linkedin bg-light"
           title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
         ></a>
