--- a/projects.html
+++ b/projects.html
@@ -77,13 +77,15 @@
             src="images/cappadocia.png"
             alt="Cappadocia balloon tour project preview"
             class="rounded img-fluid"
+            id="project-1"
           />
         </div>
         <div class="col-lg-6">
           <div class="project-headings">
             <h4>Cappadocia Balloon Tour Project</h4>
             <h3 class="text-dark text-muted">
-              - Built with <strong>HTML</strong> and <strong>CSS</strong>
+              - Built with <strong>HTML</strong>, <strong>CSS</strong> and
+              <strong>JavaScript</strong>
             </h3>
             <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
           </div>
@@ -96,13 +98,15 @@
             src="/images/weatherapp.png"
             alt="Weather app project preview"
             class="img-fluid w-100"
+            id="project-2"
           />
         </div>
         <div class="col-lg-6">
           <div class="project-headings">
             <h4>Weather Application Project</h4>
             <h3 class="text-dark text-muted">
-              - Built with <strong>HTML</strong>,<strong>CSS</strong> and
+              - Built with <strong>HTML</strong>,
+              <strong>an active API</strong>, <strong>advanced CSS</strong> and
               <strong>JavaScript</strong>
             </h3>
             <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
@@ -112,7 +116,7 @@
     </div>
     <footer>
       <hr />
-      <h4 class="text-muted text-center">Contact me</h4>
+      <h4 class="text-center">Contact me</h4>
       <div class="social-links">
         <a
           href="mailto:gizemeda91@gmail.com"
@@ -124,7 +128,7 @@
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
           title="linkedin profile of Gizem Eda Varol"
-          class="footer-linkedin bg-light"
+          class="linkedin bg-light"
           ><i class="fab fa-linkedin-in"></i
         ></a>
       </div>
