--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <h3 class="text-opacity-light mb-5">
           Front-end developer, based in Spain
         </h3>
-        <div class="button">
-          <a href="/contact.html" title="contact button">Contact me</a>
-        </div>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <div class="container">
@@ -90,54 +90,60 @@
           <img
             src="images/cappadocia.png"
             alt="cappadocia balloon tour"
-            class="img-fluid rounded mb-5"
+            class="project-image img-fluid rounded mb-5"
           />
         </div>
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Balloon Tour Project</h4>
-            <p class="mt-3 text-muted">
-              Since the late 300s BC the name Cappadocia came to be restricted
-              to the inland province (sometimes called Great Cappadocia), Upper
-              Cappadocia, which alone will be the focus of this article. Lower
-              Cappadocia is focused to elsewhere. According to Herodotus, in the
-              time of the Ionian Revolt (499 BC), the Cappadocians were reported
-              as occupying a region from Mount Taurus to the vicinity of the
-              Euxine (Black Sea).
+            <p class="mt-3 mb-4 text-muted">
+              I entered the world of front-end development by gaining some
+              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
+              these languages, along with my new skills in VS Code, to build a
+              landing page about Yogurt. The page utilizes JavaScript functions
+              to create user interaction.
             </p>
-            <button>Learn more</button>
+            <a
+              href="/projects.html#project-1"
+              class="btn btn-branding"
+              title="project page button"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
-      <hr />
       <div class="row mt-5 mb-5">
-        <div class="col-lg-6 image-column">
-          <img
-            src="images/weatherapp.png"
-            alt="cappadocia balloon tour"
-            class="img-fluid rounded mb-5 w-100"
-          />
-        </div>
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Weather App Project</h4>
             <p class="mt-3 text-muted">
-              Since the late 300s BC the name Cappadocia came to be restricted
-              to the inland province (sometimes called Great Cappadocia), Upper
-              Cappadocia, which alone will be the focus of this article. Lower
-              Cappadocia is focused to elsewhere. According to Herodotus, in the
-              time of the Ionian Revolt (499 BC), the Cappadocians were reported
-              as occupying a region from Mount Taurus to the vicinity of the
-              Euxine (Black Sea).
+              I built a Vanilla JavaScript weather app in SheCodes Plus, an
+              advanced 8-week JavaScript coding workshop. Building upon my
+              previously-gained knowledge, I also became skilled in Bootstrap,
+              API’s, real-life development workflow, hosting, and advanced
+              JavaScript. I combined all of these skills to create a
+              fully-functioning weather app.
             </p>
-            <button>Learn more</button>
+            <a
+              href="/projects.html#project-2"
+              class="btn btn-branding"
+              title="project page button"
+              >Learn more</a
+            >
           </div>
+        </div>
+        <div class="col-lg-6 image-column">
+          <img
+            src="images/weatherapp.png"
+            alt="cappadocia balloon tour"
+            class="project-image img-fluid rounded mb-5 w-100"
+          />
         </div>
       </div>
     </div>
     <footer>
       <hr />
-      <h4 class="text-muted text-center">Contact me</h4>
+      <h4 class="text-center">Contact me</h4>
       <div class="social-links">
         <a
           href="mailto:gizemeda91@gmail.com"
@@ -148,7 +154,7 @@
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
-          class="footer-linkedin bg-light"
+          class="linkedin bg-light"
           title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
         ></a>
