Updated about page. Added GitHub icon on the footer

--- a/projects.html
+++ b/projects.html
@@ -131,6 +131,13 @@
           class="linkedin bg-light"
           ><i class="fab fa-linkedin-in"></i
         ></a>
+        <a
+          href="https://github.com/gedavarol/portfolio-project"
+          target="_blank"
+          class="github bg-light"
+          title="GitHub profile of Gizem Eda Varol"
+          ><i class="fab fa-github-square"></i
+        ></a>
       </div>
     </footer>
   </body>
