--- a/about.html
+++ b/about.html
@@ -68,14 +68,14 @@
     <div class="container">
       <div class="row">
         <div class="about-text col-lg-6">
-          <h2 class="text-dark mt-5">Hi, I´m Gizem Eda Varol</h2>
+          <h2 class="text-dark mt-5">Hi, I’m Gizem Eda Varol</h2>
           <div class="definition bg-light mt-3">
             <h3 class="text-dark">Front-end developer, based in Spain</h3>
             <p class="text-muted mb-1">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I’m very passionate about coding and very eager to improve myself.
+              I’m currently seeking new opportunities in front-end development.
+              I’m open to work remotely and have flexible hours. I’m highly
+              skilled in JavaScript and React.
             </p>
             <div class="button p-4 ps-0">
               <a href="/projects.html" title="Projects button"
@@ -109,6 +109,13 @@
           class="linkedin bg-light"
           title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a
+          href="https://github.com/gedavarol/portfolio-project"
+          target="_blank"
+          class="github bg-light"
+          title="GitHub profile of Gizem Eda Varol"
+          ><i class="fab fa-github-square"></i
         ></a>
       </div>
     </footer>
