--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <hr />
       </nav>
       <div class="hero mb-5">
-        <h2>Hello I´m</h2>
+        <h2>Hello I’m</h2>
         <h1 class="mb-3">Gizem Eda Varol</h1>
         <h3 class="text-opacity-light mb-5">
           Front-end developer, based in Spain
@@ -157,6 +157,13 @@
           class="linkedin bg-light"
           title="Linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a
+          href="https://github.com/gedavarol/portfolio-project"
+          target="_blank"
+          class="github bg-light"
+          title="GitHub profile of Gizem Eda Varol"
+          ><i class="fab fa-github-square"></i
         ></a>
       </div>
     </footer>
