--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,17 @@
               - Built with <strong>HTML</strong>, <strong>CSS</strong> and
               <strong>JavaScript</strong>
             </h3>
-            <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
+            <h3 class="text- dark text-muted">
+              - This project was codded by Gizem Eda Varol, and it is
+              <a
+                href="https://github.com/gedavarol/Cappadocia-balloon-tour"
+                target="_blank"
+                title="cappadocia balloon tour project open source on GitHub"
+                class="open-source"
+                >open-sourced</a
+              >
+              <br />
+            </h3>
           </div>
         </div>
       </div>
@@ -109,7 +119,17 @@
               <strong>an active API</strong>, <strong>advanced CSS</strong> and
               <strong>JavaScript</strong>
             </h3>
-            <h3 class="text- dark text-muted">- Open code link: <br />#</h3>
+            <h3 class="text- dark text-muted">
+              - This project was codded by Gizem Eda Varol, and it is
+              <a
+                href="https://github.com/gedavarol/project1-weatherapp"
+                target="_blank"
+                title="weather app open source on GitHub"
+                class="open-source"
+                >open-sourced</a
+              >
+              <br />
+            </h3>
           </div>
         </div>
       </div>
