Updated projects button

--- a/about.html
+++ b/about.html
@@ -78,7 +78,10 @@
               skilled in JavaScript and React.
             </p>
             <div class="button p-4 ps-0">
-              <a href="/projects.html" title="Projects button"
+              <a
+                href="/projects.html"
+                class="btn btn-branding"
+                title="Projects button"
                 >See my projects</a
               >
             </div>
