Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities. You can contact Gizem Eda Varol.">
+    <meta
+      name="description"
+      content="Gizem Eda Varol is a professional front-end developer. She is eager to improve herself all the time and she is open to new job opportunities. You can contact Gizem Eda Varol."
+    />
     <title>Contact Gizem Eda Varol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -31,7 +34,7 @@
   </head>
   <body>
     <div class="first-section">
-     <nav>
+      <nav>
         <hr />
         <div class="container">
           <ul>
@@ -45,17 +48,16 @@
               <a href="/about.html" title="About Gizem Eda Varol">About</a>
             </li>
             <li>
-              <a
-                href="/projects.html"
-                title="The projects of Gizem Eda Varol"
-               
-              >
+              <a href="/projects.html" title="The projects of Gizem Eda Varol">
                 Projects</a
               >
             </li>
             <li>
-              <a href="/contact.html" title="Contact Gizem Eda Varol"
-                 class="active">Contact</a
+              <a
+                href="/contact.html"
+                title="Contact Gizem Eda Varol"
+                class="active"
+                >Contact</a
               >
             </li>
           </ul>
@@ -64,39 +66,32 @@
       </nav>
       <h1 class="hero mb-5">Contact me</h1>
     </div>
-    <div class="container">
-      <div class="contact-info">
-        <div class="phone-number">
-          <div class="text-muted">
-            ☎️ Phone number
-            <div><strong class="text-dark">+34 698518360</strong></div>
+    <div class="contact-info">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div>☎️ Phone number</div>
+            <div>+34 698518360</div>
           </div>
-        </div>
-        <div class="email">
-          <div class="text-muted">
-            📧 E-mail
-            <div>
-              <strong
-                ><a href="mailto:gizemeda91@gmail.com" title="email address" class="text-dark"
-                  >gizemeda91@gmail.com</a
-                >
-              </strong>
-            </div>
+          <div class="col-4">
+            <div>📧 E-mail</div>
+            <a
+              href="mailto:gizemeda91@gmail.com"
+              title="email address"
+              target="_blank"
+              class="text-dark"
+              >gizemeda91@gmail.com</a
+            >
           </div>
-        </div>
-        <div class="linkedin">
-          <div class="text-muted">
-            LinkedIn
-            <div>
-              <strong
-                ><a
-                  href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
-                  target="_blank"
-                  title="linkedin profile of Gizem Eda Varol"
-                  class="linkedin-link text-dark"
-                  ><i class="fab fa-linkedin"></i></i></a
-              ></strong>
-            </div>
+          <div class="col-4">
+            <div>LinkedIn</div>
+            <a
+              href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
+              target="_blank"
+              class="linkedin bg-light"
+              title="Linkedin profile of Gizem Eda Varol"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
