Added background to footer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="hero mb-5">
         <h2>Hello I’m</h2>
         <h1 class="mb-3">Gizem Eda Varol</h1>
-        <h3 class="text-opacity-light mb-5">
+        <h3 class="developer-text text-opacity-light mb-5">
           Front-end developer, based in Spain
         </h3>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row mt-5 mb-5">
+      <div class="row mt-5">
         <div class="col-lg-6 image-column">
           <img
             src="images/cappadocia.png"
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5 mb-5">
+      <div class="row mt-5">
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Weather App Project</h4>
@@ -141,7 +141,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="bg-light">
       <hr />
       <h4 class="text-center">Contact me</h4>
       <div class="social-links">
