--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="bg-light">
       <hr />
       <h4 class="text-center">Contact me</h4>
       <div class="social-links">
