Updated contact page

--- a/about.html
+++ b/about.html
@@ -96,28 +96,20 @@
         </div>
       </div>
     </div>
-
     <footer class="bg-light">
       <hr />
       <h4 class="text-center">Contact me</h4>
       <div class="social-links">
-        <a
-          href="mailto:gizemeda91@gmail.com"
-          class="footer-email bg-light"
-          title="email address of Gizem Eda Varol"
-          >📧</a
-        >
+        <a href="mailto:gizemeda91@gmail.com" title="email address">📧</a>
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
-          class="linkedin bg-light"
-          title="Linkedin profile of Gizem Eda Varol"
+          title="linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
         ></a>
         <a
           href="https://github.com/gedavarol/portfolio-project"
           target="_blank"
-          class="github bg-light"
           title="GitHub profile of Gizem Eda Varol"
           ><i class="fab fa-github-square"></i
         ></a>
