--- a/contact.html
+++ b/contact.html
@@ -66,34 +66,35 @@
       </nav>
       <h1 class="hero mb-5">Contact me 📇</h1>
     </div>
+
     <div class="contact-info">
-      <div class="container">
-        <div class="row">
-          <div class="col-4">
-            <div>☎️ Phone number</div>
-            <div>+34 698518360</div>
-          </div>
-          <div class="col-4">
-            <div>📧 E-mail</div>
-            <a
-              href="mailto:gizemeda91@gmail.com"
-              title="email address"
-              target="_blank"
-              class="text-dark"
-              >gizemeda91@gmail.com</a
-            >
-          </div>
-          <div class="col-4">
-            <div>LinkedIn</div>
-            <a
-              href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
-              target="_blank"
-              class="linkedin bg-light"
-              title="Linkedin profile of Gizem Eda Varol"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
+      <div class="contact-info-inner">
+        <div class="text-muted">📞 Phone number</div>
+        <div class="phone-number">+34 698518360</div>
+      </div>
+
+      <div class="contact-info-inner">
+        <div class="text-muted">📧 E-mail</div>
+        <a
+          href="mailto:gizemeda91@gmail.com"
+          title="email address"
+          target="_blank"
+          class="info-link"
+          >gizemeda91@gmail.com</a
+        >
+      </div>
+
+      <div class="contact-info-inner">
+        <div class="text-muted">
+          <i class="fab fa-linkedin-in"></i> LinkedIn
         </div>
+        <a
+          href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
+          target="_blank"
+          class="info-link"
+          title="Linkedin profile of Gizem Eda Varol"
+          >Click here</a
+        >
       </div>
     </div>
   </body>
