--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
                   <a
                     href="https://www.shecodes.io/workshops/shecodes-online-workshop-63-0/projects/328625"
                     target="_blank"
-                    class="project-link"
+                    class="info-link"
                     title="project view"
                     >Click here </a
                   >to view project
@@ -104,7 +104,7 @@
                     href="https://github.com/gedavarol/Cappadocia-balloon-tour"
                     target="_blank"
                     title="cappadocia balloon tour project open source on GitHub"
-                    class="project-link"
+                    class="info-link"
                     >open-sourced</a
                   >
                 </li>
@@ -165,23 +165,16 @@
       <hr />
       <h4 class="text-center">Contact me</h4>
       <div class="social-links">
-        <a
-          href="mailto:gizemeda91@gmail.com"
-          class="footer-email bg-light"
-          title="email address"
-          >📧</a
-        >
+        <a href="mailto:gizemeda91@gmail.com" title="email address">📧</a>
         <a
           href="https://www.linkedin.com/in/gizem-eda-varol-77011753/"
           target="_blank"
           title="linkedin profile of Gizem Eda Varol"
-          class="linkedin bg-light"
           ><i class="fab fa-linkedin-in"></i
         ></a>
         <a
           href="https://github.com/gedavarol/portfolio-project"
           target="_blank"
-          class="github bg-light"
           title="GitHub profile of Gizem Eda Varol"
           ><i class="fab fa-github-square"></i
         ></a>
