Portfolio link is added above footer. Footer css is updated

--- a/projects.html
+++ b/projects.html
@@ -161,9 +161,20 @@
         </div>
       </div>
     </div>
+    <hr />
+    <div class="portfolio-project">
+      This portfolio is coded by Gizem Eda Varol
+      <a
+        href="https://github.com/gedavarol/portfolio-project"
+        target="_blank"
+        title="GitHub profile of Gizem Eda Varol"
+        class="info-link"
+        ><i class="fab fa-github-square github"></i> open-source</a
+      >
+    </div>
+    <hr />
     <footer class="bg-light">
-      <hr />
-      <h4 class="text-center">Contact me</h4>
+      <h4 class="text-center mb-0">Contact me</h4>
       <div class="social-links">
         <a href="mailto:gizemeda91@gmail.com" title="email address">📧</a>
         <a
@@ -171,12 +182,6 @@
           target="_blank"
           title="linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
-        ></a>
-        <a
-          href="https://github.com/gedavarol/portfolio-project"
-          target="_blank"
-          title="GitHub profile of Gizem Eda Varol"
-          ><i class="fab fa-github-square"></i
         ></a>
       </div>
     </footer>
