--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
               I entered the world of front-end development by gaining some
               knowledge in HTML, CSS, and JavaScript. I used my knowledge of
               these languages, along with my new skills in VS Code, to build a
-              landing page about Yogurt. The page utilizes JavaScript functions
-              to create user interaction.
+              landing page about balloon tour. The page utilizes JavaScript
+              functions to create user interaction.
             </p>
             <a
               href="/projects.html#project-1"
@@ -141,9 +141,20 @@
         </div>
       </div>
     </div>
+    <hr />
+    <div class="portfolio-project">
+      This portfolio is coded by Gizem Eda Varol
+      <a
+        href="https://github.com/gedavarol/portfolio-project"
+        target="_blank"
+        title="GitHub profile of Gizem Eda Varol"
+        class="info-link"
+        ><i class="fab fa-github-square github"></i> open-source</a
+      >
+    </div>
+    <hr />
     <footer class="bg-light">
-      <hr />
-      <h4 class="text-center">Contact me</h4>
+      <h4 class="text-center mb-0">Contact me</h4>
       <div class="social-links">
         <a href="mailto:gizemeda91@gmail.com" title="email address">📧</a>
         <a
@@ -151,12 +162,6 @@
           target="_blank"
           title="linkedin profile of Gizem Eda Varol"
           ><i class="fab fa-linkedin-in"></i
-        ></a>
-        <a
-          href="https://github.com/gedavarol/portfolio-project"
-          target="_blank"
-          title="GitHub profile of Gizem Eda Varol"
-          ><i class="fab fa-github-square"></i
         ></a>
       </div>
     </footer>
