Updated nav content and improved nav responsive

--- a/about.html
+++ b/about.html
@@ -37,32 +37,25 @@
       <nav>
         <hr />
         <div class="container">
-          <ul>
-            <li class="heading-name">
-              <a href="/" title="Homepage">Geda Varol</a>
-            </li>
-            <li>
-              <a href="/" title="Homepage">Home</a>
-            </li>
-            <li>
-              <a href="/about.html" title="About Gizem Eda Varol" class="active"
-                >About</a
-              >
-            </li>
-            <li>
-              <a href="/projects.html" title="The projects of Gizem Eda Varol">
-                Projects</a
-              >
-            </li>
-            <li>
-              <a href="/contact.html" title="Contact Gizem Eda Varol"
-                >Contact</a
-              >
-            </li>
-          </ul>
+          <span class="nav-heading">
+            <a href="/" title="Homepage">Home</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/about.html" title="About Gizem Eda Varol" class="active">About</a>
+          </span>
+          <span class="nav-heading">
+            <a
+              href="/projects.html"
+              title="The projects of Gizem Eda Varol"
+            >
+              Projects</a
+            >
+          </span>
+          <span class="nav-heading">
+            <a href="/contact.html" title="Contact Gizem Eda Varol">Contact</a>
+          </span>
         </div>
         <hr />
-      </nav>
       <h1 class="hero">About me</h1>
     </div>
     <div class="container">
