--- a/contact.html
+++ b/contact.html
@@ -37,36 +37,30 @@
       <nav>
         <hr />
         <div class="container">
-          <ul>
-            <li class="heading-name">
-              <a href="/" title="Homepage">Geda Varol</a>
-            </li>
-            <li>
-              <a href="/" title="Homepage">Home</a>
-            </li>
-            <li>
-              <a href="/about.html" title="About Gizem Eda Varol">About</a>
-            </li>
-            <li>
-              <a href="/projects.html" title="The projects of Gizem Eda Varol">
-                Projects</a
-              >
-            </li>
-            <li>
-              <a
-                href="/contact.html"
-                title="Contact Gizem Eda Varol"
-                class="active"
-                >Contact</a
-              >
-            </li>
-          </ul>
+          <span class="nav-heading">
+            <a href="/" title="Homepage">Home</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/about.html" title="About Gizem Eda Varol">About</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/projects.html" title="The projects of Gizem Eda Varol">
+              Projects</a
+            >
+          </span>
+          <span class="nav-heading">
+            <a
+              href="/contact.html"
+              title="Contact Gizem Eda Varol"
+              class="active"
+              >Contact</a
+            >
+          </span>
         </div>
         <hr />
       </nav>
-      <h1 class="hero mb-5">Contact me 📇</h1>
+      <h1 class="hero mb-5">Contact me</h1>
     </div>
-
     <div class="contact-info">
       <div class="contact-info-inner">
         <div class="text-muted">📞 Phone number</div>
@@ -97,5 +91,17 @@
         >
       </div>
     </div>
+    <hr />
+    <div class="portfolio-project">
+      This portfolio is coded by Gizem Eda Varol
+      <a
+        href="https://github.com/gedavarol/portfolio-project"
+        target="_blank"
+        title="GitHub profile of Gizem Eda Varol"
+        class="info-link"
+        ><i class="fab fa-github-square github"></i> open-source</a
+      >
+    </div>
+    <hr / class="mb-5">
   </body>
 </html>
