--- a/index.html
+++ b/index.html
@@ -37,44 +37,25 @@
       <nav>
         <hr />
         <div class="container">
-          <ul>
-            <li class="heading-name">
-              <a href="/" title="Homepage">Geda Varol</a>
-            </li>
-            <li>
-              <a href="/" title="Homepage" class="nav-headings active">Home</a>
-            </li>
-            <li>
-              <a
-                href="/about.html"
-                title="About Gizem Eda Varol"
-                class="nav-headings"
-                >About</a
-              >
-            </li>
-            <li>
-              <a
-                href="/projects.html"
-                title="The projects of Gizem Eda Varol"
-                class="nav-headings"
-              >
-                Projects</a
-              >
-            </li>
-            <li>
-              <a
-                href="/contact.html"
-                title="Contact Gizem Eda Varol"
-                class="nav-headings"
-                >Contact</a
-              >
-            </li>
-          </ul>
+          <span class="nav-heading">
+            <a href="/" title="Homepage" class="active">Home</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/about.html" title="About Gizem Eda Varol">About</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/projects.html" title="The projects of Gizem Eda Varol">
+              Projects</a
+            >
+          </span>
+          <span class="nav-heading">
+            <a href="/contact.html" title="Contact Gizem Eda Varol">Contact</a>
+          </span>
         </div>
         <hr />
       </nav>
       <div class="hero mb-5">
-        <h2>Hello I’m</h2>
+        <h2>🖐🏼 Hello I’m</h2>
         <h1 class="mb-3">Gizem Eda Varol</h1>
         <h3 class="developer-text text-opacity-light mb-5">
           Front-end developer, based in Spain
