--- a/projects.html
+++ b/projects.html
@@ -37,31 +37,24 @@
       <nav>
         <hr />
         <div class="container">
-          <ul>
-            <li class="heading-name">
-              <a href="/" title="Homepage">Geda Varol</a>
-            </li>
-            <li>
-              <a href="/" title="Homepage">Home</a>
-            </li>
-            <li>
-              <a href="/about.html" title="About Gizem Eda Varol">About</a>
-            </li>
-            <li>
-              <a
-                href="/projects.html"
-                title="The projects of Gizem Eda Varol"
-                class="active"
-              >
-                Projects</a
-              >
-            </li>
-            <li>
-              <a href="/contact.html" title="Contact Gizem Eda Varol"
-                >Contact</a
-              >
-            </li>
-          </ul>
+          <span class="nav-heading">
+            <a href="/" title="Homepage">Home</a>
+          </span>
+          <span class="nav-heading">
+            <a href="/about.html" title="About Gizem Eda Varol">About</a>
+          </span>
+          <span class="nav-heading">
+            <a
+              href="/projects.html"
+              title="The projects of Gizem Eda Varol"
+              class="active"
+            >
+              Projects</a
+            >
+          </span>
+          <span class="nav-heading">
+            <a href="/contact.html" title="Contact Gizem Eda Varol">Contact</a>
+          </span>
         </div>
         <hr />
       </nav>
@@ -133,7 +126,7 @@
                   <a
                     href="https://weatherapp-gizem.netlify.app/"
                     target="_blank"
-                    class="project-link"
+                    class="info-link"
                     title="project view"
                     >Click here </a
                   >to view project
@@ -150,7 +143,7 @@
                     href="https://github.com/gedavarol/project1-weatherapp"
                     target="_blank"
                     title="weather app open source on GitHub"
-                    class="project-link"
+                    class="info-link"
                     >open-sourced</a
                   >
                 </li>
