--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="hero mb-5">
         <h2>🖐🏼 Hello I’m</h2>
         <h1 class="mb-3">Gizem Eda Varol</h1>
-        <h3 class="developer-text text-opacity-light mb-5">
+        <h3 class="developer-text text-opacity-light mb-4">
           Front-end developer, based in Spain
         </h3>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 mb-5">
         <div class="col-lg-6 bg-light rounded mb-2">
           <div class="definition mt-3">
             <h4 class="text-dark">Weather App Project</h4>
