--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
         </div>
       </div>
       <hr />
-      <div class="row">
+      <div class="row mb-4">
         <div class="col-lg-6 image-column mb-3 mt-3">
           <img
             src="/images/weatherapp.png"
